@@ -253,6 +253,17 @@
 
 #define lv_is_removed(lv)	(((lv)->status & LV_REMOVED) ? 1 : 0)
 
+/* Recognize component LV (matching lib/misc/lvm-string.c _lvname_has_reserved_component_string()) */
+#define lv_is_component(lv) (lv_is_cache_origin(lv) || ((lv)->status & (\
+	CACHE_POOL_DATA |\
+	CACHE_POOL_METADATA |\
+	MIRROR_IMAGE |\
+	MIRROR_LOG |\
+	RAID_IMAGE |\
+	RAID_META |\
+	THIN_POOL_DATA |\
+	THIN_POOL_METADATA)) ? 1 : 0)
+
 int lv_layout_and_role(struct dm_pool *mem, const struct logical_volume *lv,
 		       struct dm_list **layout, struct dm_list **role);
 
